Some fixes: -move CreateWebPath method to Product Service -use the CreateWebPath in every product image -make the image path in the app settings not dependent on the local pc path -seeding the database with real data

--- a/BlazorEcommerce/Pages/Checkout.razor
+++ b/BlazorEcommerce/Pages/Checkout.razor
@@ -16,7 +16,7 @@
                         {
                             <div class="row g-0">
                                 <div class="col-4">
-                                            <img src="@item.img_url" class="img-fluid rounded-start" alt="...">
+                                            <img src="@ProductService.CreateWebPath(item.img_url)" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-8">
                                     <div class="card-body pt-5">
