--- a/BlazorEcommerce/Pages/Category.razor
+++ b/BlazorEcommerce/Pages/Category.razor
@@ -11,7 +11,7 @@
                     <div class="col col-6 col-xl-3 col-lg-4 col-sm-6  mb-3">
                         <div class="card">
                             <a href="/p/@item.product_id">
-                                <img  src="@item.img_url" class="card-img-top" alt="...">
+                                <img  src="@ProductService.CreateWebPath(item.img_url)" class="card-img-top" alt="...">
                             </a>
                             <div class="card-body">
                                 <h5 class="card-title d-flex justify-content-between">@item.name
