--- a/BlazorEcommerce/Pages/DashBoardProdcuts.razor
+++ b/BlazorEcommerce/Pages/DashBoardProdcuts.razor
@@ -296,7 +296,7 @@
                                     {
                                         <img src="~/images/ImgPlaceHolder.jpg" class="img-fluid rounded-start" alt="...">
                                     }
-                                <img src="@CreateWebPath(selectedProduct.img_url)" class="img-fluid rounded-start" alt="...">
+                                <img src="@ProductService.CreateWebPath(selectedProduct.img_url)" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-8 col-lg-4 col-md-10">
                                     <div class="card-body pt-5">
@@ -345,7 +345,7 @@
                                         else
                                         {
 
-                                            <img src="@CreateWebPath(item.img_url)" class="img-fluid rounded-start" alt="...">
+                                            <img src="@ProductService.CreateWebPath(item.img_url)" class="img-fluid rounded-start" alt="...">
                                         }
                                     </div>
                                     <div class="col-8 col-lg-4 col-md-10">
