--- a/BlazorEcommerce/Pages/Product.razor
+++ b/BlazorEcommerce/Pages/Product.razor
@@ -12,7 +12,7 @@
                     @* </div> *@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="@product.img_url" class="d-block w-100" alt="...">
+                            <img src="@ProductService.CreateWebPath(product.img_url)" class="d-block w-100" alt="...">
                         </div>
                         @* <div class="carousel-item"> *@
                         @*     <img src="images/airpodmax-large-blue.jpg" class="d-block w-100" alt="..."> *@
