--- a/BlazorEcommerce/Pages/ProductsPage.razor
+++ b/BlazorEcommerce/Pages/ProductsPage.razor
@@ -30,7 +30,7 @@
                         <div class="col col-6 col-xl-3 col-lg-4 col-sm-6  mb-3">
                             <div class="card">
                                 <a href="/p/@item.product_id">
-                                    <img src="@CreateWebPath(item.img_url)" class="card-img-top" alt="...">
+                                    <img src="@ProductService.CreateWebPath(item.img_url)" class="card-img-top" alt="...">
                                 </a>
                                 <div class="card-body">
                                     <h5 class="card-title d-flex justify-content-between">@item.name
@@ -61,15 +61,7 @@
     public List<ProductsModel> Products = new();
     private IEnumerable<ProductCategoryModel>? productCategory;
     
-    public string CreateWebPath(string path)
-    {
-        if (!string.IsNullOrEmpty(path))
-        {
-
-            return Path.Combine(config.GetValue<string>("WebStorageRoot")!, path);
-        }
-        return "";
-    }
+    
     protected override async Task OnInitializedAsync()
     {
 
