--- a/BlazorEcommerce/Pages/ProductsPage.razor
+++ b/BlazorEcommerce/Pages/ProductsPage.razor
@@ -4,55 +4,99 @@
 @inject ICategoryService CategoryService
 @inject IProductCategoryService ProductCategoryService
 @inject IConfiguration config
+@* <section class="products-section pt-5"> *@
+@*     <div class="container "> *@
+@*         $1$ <h1 class="section__heading mb-4">Today's Best Deals For You</h1> #1# *@
+@*                 <ul class="category-taps nav nav-pills" id="pills-tab" role="tablist"> *@
+@*                     @foreach (var item in Categories) *@
+@*                     { *@
+@*                         if (item is not null) *@
+@*                         { *@
+@* *@
+@*                             <li class="nav-item" role="presentation"> *@
+@*                         <button role="tab" class="nav-link ms-2 mt-2" aria-selected="false" data-bs-toggle="pill" @onclick="() => ShowCategoryProducts(item.category_id)">@item.Name</button> *@
+@*                             </li> *@
+@*                         } *@
+@*                     } *@
+@*          *@
+@*                 </ul> *@
+@*         <div class="products-container row mt-4"> *@
+@*             @if (CategoryProducts is not null) *@
+@*             { *@
+@* *@
+@*                 <Virtualize TItem="ProductsModel" Items="@CategoryProducts" Context="item"> *@
+@*                     @if (item.quantity > 0) *@
+@*                     { *@
+@*                         <div class="col col-6 col-xl-3 col-lg-4 col-sm-6  mb-3"> *@
+@*                             <div class="card"> *@
+@*                                 <a href="/p/@item.product_id"> *@
+@*                                     <img src="@ProductService.CreateWebPath(item.img_url)" class="card-img-top" alt="..."> *@
+@*                                 </a> *@
+@*                                 <div class="card-body"> *@
+@*                                     <h5 class="card-title d-flex justify-content-between">@item.name *@
+@*                                         <span class="">@item.price$</span> *@
+@* *@
+@*                                     </h5> *@
+@*                                     <p class="card-text">@item.description</p> *@
+@*                                     <button @onclick="(() => AddToCart(item))" class="btn mybtn--outline">Add To Cart</button> *@
+@*                                 </div> *@
+@*                             </div> *@
+@*                         </div> *@
+@*                     } *@
+@*                 </Virtualize> *@
+@*                  *@
+@*             } *@
+@* *@
+@* *@
+@* *@
+@*         </div> *@
+@*     </div> *@
+@* *@
+@* </section> *@
 <section class="products-section pt-5">
-    <div class="container ">
-        @* <h1 class="section__heading mb-4">Today's Best Deals For You</h1> *@
-                <ul class="category-taps nav nav-pills" id="pills-tab" role="tablist">
-                    @foreach (var item in Categories)
-                    {
-                        if (item is not null)
-                        {
+    <div class="container">
+        <!-- Commented out the heading, as it's not included in the provided code -->
 
-                            <li class="nav-item" role="presentation">
+        <ul class="category-taps nav nav-pills" id="pills-tab" role="tablist">
+            @foreach (var item in Categories)
+            {
+                if (item is not null)
+                {
+                    <li class="nav-item" role="presentation">
                         <button role="tab" class="nav-link ms-2 mt-2" aria-selected="false" data-bs-toggle="pill" @onclick="() => ShowCategoryProducts(item.category_id)">@item.Name</button>
-                            </li>
-                        }
-                    }
-        
-                </ul>
+                    </li>
+                }
+            }
+        </ul>
+
         <div class="products-container row mt-4">
             @if (CategoryProducts is not null)
             {
-
                 <Virtualize TItem="ProductsModel" Items="@CategoryProducts" Context="item">
                     @if (item.quantity > 0)
                     {
-                        <div class="col col-6 col-xl-3 col-lg-4 col-sm-6  mb-3">
-                            <div class="card">
+                        <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-3">
+                            <div class="card h-100">
                                 <a href="/p/@item.product_id">
-                                    <img src="@ProductService.CreateWebPath(item.img_url)" class="card-img-top" alt="...">
+                                    <img src="@ProductService.CreateWebPath(item.img_url)" class="card-img-top img-fluid" style="object-fit: cover; height: 200px;" alt="...">
                                 </a>
                                 <div class="card-body">
-                                    <h5 class="card-title d-flex justify-content-between">@item.name
-                                        <span class="">@item.price$</span>
-
-                                    </h5>
-                                    <p class="card-text">@item.description</p>
-                                    <button @onclick="(() => AddToCart(item))" class="btn mybtn--outline">Add To Cart</button>
+                                    <h5 class="card-title">@item.name</h5>
+                                    <p class="card-text description" style="height: 60px; overflow: hidden; text-overflow: ellipsis;">@item.description</p>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <span class="products-price price" style="">@item.price$</span>
+                                        <button @onclick="(() => AddToCart(item))" class="btn mybtn--outline">Add To Cart</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     }
                 </Virtualize>
-                
             }
-
-
-
         </div>
     </div>
-
 </section>
+
 @code {
 
     public ProductBase ProductBase = new();
