--- a/BlazorEcommerce/Shared/NavBar.razor
+++ b/BlazorEcommerce/Shared/NavBar.razor
@@ -125,7 +125,7 @@
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-4">
-                            <img src="@item.img_url" class="img-fluid rounded-start" alt="...">
+                            <img src="@ProductService.CreateWebPath(item.img_url)" class="img-fluid rounded-start" alt="...">
                         </div>
                         <div class="col-8">
                             <div class="card-body">
